    - Use $conf::HOME instead of $main::HOME.
    - Move $main::username to Sbuild::Conf.
    - Set $main::chroot_dir, $main::chroot_build_dir,
      $main::srcdep_lock_dir and $main::ilock_file from the current
      chroot $Sbuild::Chroot::current.  $main::srcdep_lock_dir replaces
      $conf::srcdep_lock_dir (which is still used to set when the chroot
      is set up).
  * Sbuild.pm: Add basename function.
  * Sbuild/Chroot.pm:
    - New perl module for chroot operations.  It contains the functions
      begin_session, end_session, log_command, get_command_internal,
      get_command, run_command, exec_command, get_apt_command_internal,
      get_apt_command and run_apt_command.
    - Don't export init and log_command.
    - Don't hardcode a list of chroots; use a glob to search for chroot-*
      instead.  This allows any distribution name to be specified with -d.
    - Add an "APT Options" attribute to the chroot hash, to replace
      $main::chroot_apt_options.
    - Use STDERR instead of PLOG (which may not be available).
    - Replace $main::debug with $Sbuild::Conf::debug.
    - Replace $main::username with $Sbuild::Conf::username.
    - begin_session takes the distribution as its first argument, rather
      than using $main::distribution.
    - Don't use $main::chroot_dir.  Add the build paths as 'Build Location',
      'Srcdep Lock Dir' and 'Install Lock' to the chroot metadata.
  * Sbuild/Conf.pm:
    - New perl module for configuration variables.  It reads the system
      and user configuration.
    - Add $debug.
    - Add $username.
  * Sbuild/Log.pm:
    - New perl module for logging.  It contains the functions open_log,
      close_log, open_pkg_log, close_pkg_log, add_time_entry,
      add_space_entry, send_mail and log_symlink.
    - $main::main_logfile and $main::pkg_logfile are package variables.
  * bin/checkchroot:
    - Quote all variables.
    - Sort ref-chroot file before diffing (Closes: 360058).